vcl/source/window/toolbox.cxx
@@ -1298,6 +1298,8 @@ void ToolBox::ImplInitSettings(bool bFont, bool bForeground, bool bBackground)
                 SetParentClipMode();
             }
         }
+
+        EnableChildTransparentMode(IsPaintTransparent());
     }
 }
 
